apps/homepage/homepage-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: homepage
  name: homepage
